k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cont-gen
  labels:
    name: cont-gen
    environment: development
